# rag-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml
docs/: decisions.md  usage.md
docs/eval/: _last_tmp.md  report.md  sweep.csv  sweep.md
kb/: glossary_ai_rag.md  policies.md  project_faq.md  python_basics.md
rag/: __init__.py  cli.py  config.py  ingest.py  llm.py  pipeline.py  retriever.py
rag_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
